# the-new-hotness-messages

./: .readthedocs.yml  .zuul.yaml  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: conf.py  contributing.rst  index.rst  release-notes.rst  topics.rst
hotness_schema/: __init__.py  messages.py
hotness_schema/tests/: test_messages.py
news/: 58.bug  59.bug  9.dev  PR77.feature.rst  _template.rst
