[tool.towncrier]
package = "hotness_schema"
filename = "docs/release-notes.rst"
directory = "news/"
title_format = "{version} ({project_date})"
issue_format = "{issue}"
template = "news/_template.rst"

  [[tool.towncrier.type]]
  directory = "api"
  name = "API Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "fedora_messaging_the_new_hotness_schema"
version = "1.2.0"
description = "JSON schema definitions for messages published by the-new-hotness"
authors = ["Fedora Infrastructure Team <infrastructure@lists.fedoraproject.org>"]
maintainers = ["Fedora Infrastructure Team <infrastructure@lists.fedoraproject.org>"]
readme = "README.rst"
homepage = "https://github.com/fedora-infra/the-new-hotness-messages"
documentation = "https://the-new-hotness-messaging-schema.readthedocs.io/en/latest"
repository = "https://github.com/fedora-infra/anitya-messages"
license = "GPL-2.0-or-later"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
include = [
  "LICENSE", "README.rst"
]
packages = [
  { include = "hotness_schema" }
]
exclude = [
  "hotness_schema.tests"
]

[tool.poetry.plugins."fedora.messages"]
"hotness.update.drop" = "hotness_schema:UpdateDrop"
"hotness.update.bug.file" = "hotness_schema:UpdateBugFile"

[tool.poetry.dependencies]
python = "^3.8.1"
fedora-messaging = "^3.1.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^23.0.0"
coverage = "^7.0.0"
diff-cover = "^7.0.1"
flake8 = "^6.0.0"
mock = "^5.0.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

# Required to test building the docs
Sphinx = "^7.0.0"

# Mypy test requirements
mypy = "^1.0"
types-mock = "^4.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"